--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.0",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^2.2.5"
