--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-tabs": "^6.0.0",
     "redux": "^4.2.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^2.2.5"
