--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "interweave": "^13.0.0",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
