--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dompurify": "^2.4.3",
     "graphql": "^16.6.0",
     "interweave": "^13.0.0",
     "pure-react-carousel": "^1.30.1",
