--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dompurify": "^2.4.3",
     "graphql": "^16.6.0",
     "interweave": "^13.0.0",
+    "jquery": "^3.6.3",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.0",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
